# audioplugins

./: Cargo.toml  add_release_prefix.py  build_all.py  readme.md  release.md  rename_release_files_windows.py
.github/workflows/: build.yaml
audio_util/: Cargo.toml
audio_util/src/: buffer.rs  crossfade.rs  lib.rs
crossfader_gui/: Cargo.toml
crossfader_gui/src/: editor.rs  lib.rs
src/: lib.rs
style/: Cargo.toml
style/src/: lib.rs  spacing.rs
style/src/color/: mod.rs
style/src/font/: mod.rs  size.rs
x_fader/: Cargo.toml
x_fader/src/: lib.rs
xy_fader/: Cargo.toml
xy_fader/src/: lib.rs
xyz_fader/: Cargo.toml
xyz_fader/src/: lib.rs
